--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.scroll-container::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+.scroll-container {
+  scrollbar-width: none;
+}
+
+/* //============================================================= */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 14px;
+}
+.sideber:hover .custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #ffffff34;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #ffffff00;
+  border-radius: 8px;
+  border: 3px solid transparent;
+  background-clip: content-box;
+}
+.sideber .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #ffffff77;
+}
+.custom-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0, 0, 0, 0.3) transparent;
+}
+.content {
+  background-color: #0a0a0a;
+  height: calc(100vh - 110px);
+  overflow-y: auto;
+}
+::-webkit-scrollbar{
+  width: 0;
 }
